--- a/server/maps/map01.html
+++ b/server/maps/map01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>${mapName} - 인구 밀도 알리미</title>
+    <title>map01 - 인구 밀도 알리미</title>
     <style>
         #mapContainer {
             width: 100%;
@@ -26,24 +26,24 @@
     </style>
 </head>
 <body>
-    <h1>${mapName} - 인구 밀도 알리미</h1>
-    <a href="/crowd-count/${mapName}"><button>군중 수 입력</button></a>
-    <form action="/upload-map/${mapName}" method="post" enctype="multipart/form-data">
+    <h1>map01 - 인구 밀도 알리미</h1>
+    <a href="/crowd-count/map01"><button>군중 수 입력</button></a>
+    <form action="/upload-map/map01" method="post" enctype="multipart/form-data">
         <label for="mapFile">SVG 파일 업로드:</label>
         <input type="file" id="mapFile" name="mapFile" accept=".svg" required><br><br>
         <input type="submit" value="업로드">
     </form>
     <div id="mapContainer">
     </div>
-    <p>여기에 ${mapName}의 세부 사항을 표시합니다.</p>
+    <p>여기에 map01의 세부 사항을 표시합니다.</p>
     <a href="/">홈으로 돌아가기</a>
     <script>
 
         document.addEventListener('DOMContentLoaded', () => {
-            fetch('/data/${mapName}/crowdData.json')
+            fetch('/data/map01/crowdData.json')
                 .then(response => response.json())
                 .then(crowdData => {
-                    fetch('/data/${mapName}/map.svg')
+                    fetch('/data/map01/map.svg')
                         .then(response => response.text())
                         .then(svgText => {
                             const parser = new DOMParser();
@@ -55,7 +55,8 @@
                                 const area = svgDoc.getElementById(areaId).querySelector('polygon');
                                 if (area) {
                                     // 구역의 중심 계산
-                                    const bbox = area.getBBox();
+                                    const bbox =  svgDoc.getElementById(areaId).getBBox();
+                                    console.log(bbox)
                                     const centerX = bbox.x + bbox.width / 2;
                                     const centerY = bbox.y + bbox.height / 2;
                                     pathPoints.push({ x: centerX, y: centerY });
@@ -73,6 +74,7 @@
                             });
 
                             // 대피 경로 그리기
+                            console.log(pathPoints)
                             const evacuationPath = document.createElementNS('http://www.w3.org/2000/svg', 'polyline');
                             const evacuationPathInner = document.createElementNS('http://www.w3.org/2000/svg', 'polyline');
                             const pointsAttr = pathPoints.map(point => `${point.x},${point.y}`).join(' ');
