--- a/server/maps/iii11.html
+++ b/server/maps/iii11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>${mapName} - 인구 밀도 알리미</title>
+    <title>iii11 - 인구 밀도 알리미</title>
     <style>
         #mapContainer {
             width: 100%;
@@ -26,9 +26,9 @@
     </style>
 </head>
 <body>
-    <h1>${mapName} - 인구 밀도 알리미</h1>
-    <a href="/crowd-count/${mapName}"><button>군중 수 입력</button></a>
-    <form action="/upload-map/${mapName}" method="post" enctype="multipart/form-data">
+    <h1>iii11 - 인구 밀도 알리미</h1>
+    <a href="/crowd-count/iii11"><button>군중 수 입력</button></a>
+    <form action="/upload-map/iii11" method="post" enctype="multipart/form-data">
         <label for="mapFile">SVG 파일 업로드:</label>
         <input type="file" id="mapFile" name="mapFile" accept=".svg" required><br><br>
         <input type="submit" value="업로드">
@@ -42,7 +42,7 @@
     </form>
     <div id="mapContainer">
     </div>
-    <p>여기에 ${mapName}의 세부 사항을 표시합니다.</p>
+    <p>여기에 iii11의 세부 사항을 표시합니다.</p>
     <a href="/">홈으로 돌아가기</a>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -85,7 +85,7 @@
                 paths.push({ area, position });
             }
 
-            fetch(`/update-evacuation/${mapName}`, {
+            fetch(`/update-evacuation/iii11`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -100,9 +100,9 @@
 
         function loadMapData() {
             Promise.all([
-                fetch(`/data/${mapName}/crowdData.json`).then(response => response.json()),
-                fetch(`/data/${mapName}/evacuation.json`).then(response => response.json()),
-                fetch(`/data/${mapName}/map.svg`).then(response => response.text())
+                fetch(`/data/iii11/crowdData.json`).then(response => response.json()),
+                fetch(`/data/iii11/evacuation.json`).then(response => response.json()),
+                fetch(`/data/iii11/map.svg`).then(response => response.text())
             ]).then(([crowdData, evacuationPaths, svgText]) => {
                             const parser = new DOMParser();
                             const svgDoc = parser.parseFromString(svgText, 'image/svg+xml').documentElement;
@@ -112,6 +112,7 @@
                             areas.forEach(areaId => {
                                 const area = svgDoc.getElementById(areaId).querySelector('polygon');
                                 if (area) {
+                                    // 구역의 중심 계산
                                     let color;
                                     if (crowdData[areaId] > 50) {
                                         color = 'red';
@@ -125,6 +126,7 @@
                                 }
                             });
 
+                            console.log(evacuationPaths)
                              // 대피 경로 그리기
                             evacuationPaths.forEach(path => {
                                 const points = path.map(point => {
@@ -146,6 +148,7 @@
                                     }
                                 }).join(' ');
                             })
+
 
                             // 대피 경로 그리기
                             const evacuationPath = document.createElementNS('http://www.w3.org/2000/svg', 'polyline');
